fixed toList